<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/s_crear" />

            <ImageView
                android:id="@+id/ivFotoCrear"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                app:srcCompat="@mipmap/avatar" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/s_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idPacienteCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spAreaIngresoCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/opciones" />

                <Spinner
                    android:id="@+id/spDoctorCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombrePacienteCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_sexo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:entries="@array/sx" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_fecha">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fechaIngresoCrear"
                        android:layout_width="234dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/s_fecha"
                        android:inputType="date" />

                    <Button
                        android:id="@+id/btnDateCrear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_edad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edadPacienteCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_estaura">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/estaturaPacienteCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_peso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pesoPacienteCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_crear_limpiar"
                    android:layout_columnSpan="2"
                    android:padding="15dp"
                    android:text="@string/s_limpiar"></Button>


                <Button
                    android:id="@+id/btn_crear_guardar"
                    android:padding="15dp"
                    android:text="@string/s_guardar"></Button>


            </GridLayout>

            <TextView
                android:id="@+id/espacioblanco"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=" " />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>