<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_modificar" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:columnCount="4">

                <EditText
                    android:id="@+id/id_pacienteBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:hint="Ingrese ID del paciente"
                    android:inputType="number"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:text="Buscar"/>

            </GridLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_areaIngresoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/opciones" />

                <Spinner
                    android:id="@+id/sp_doctorModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombreModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_sexoModificar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:entries="@array/sx" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_fecha">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fechaIngresoModificar"
                        android:layout_width="234dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/s_fecha"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="date" />

                    <Button
                        android:id="@+id/btnDateModificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/ic_menu_my_calendar" />
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_edad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edadModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_estaura">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/estaturaModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_peso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pesoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnLimpiar"
                    android:text="@string/s_limpiar"
                    android:layout_columnSpan="2"
                    android:padding="15dp">
                </Button>



                <Button
                    android:id="@+id/btnModificar"
                    android:text="@string/s_modificar"
                    android:padding="15dp">
                </Button>


            </GridLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>